fixed issue with sidebar header1 top alignment

--- a/app/css/less/page.less
+++ b/app/css/less/page.less
@@ -12,6 +12,13 @@ h1,h2,h3,h4,h5 {
   font-family:@font-family-bold;
   line-height: 1.5;
 
+  .sidebar & {
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+
 }
 
 p {
